--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -25,8 +25,10 @@
 #   unused-packages = true
 required = [
     "github.com/spf13/viper",
-    "gopkg.in/urfave/cli.v2"
-
+    "gopkg.in/urfave/cli.v2",
+    "github.com/mitchellh/go-homedir",
+    "github.com/fatih/color",
+    "github.com/stretchr/testify/require"
 ]
 
 
@@ -37,3 +39,11 @@ required = [
 [[constraint]]
   branch = "v2"
   name = "gopkg.in/urfave/cli.v2"
+
+[[constraint]]
+  name = "github.com/fatih/color"
+  version = "1.7.0"
+
+[[constraint]]
+  name = "github.com/stretchr/testify"
+  version = "1.2.2"
