--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -28,6 +28,7 @@ required = [
     "gopkg.in/urfave/cli.v2",
     "github.com/mitchellh/go-homedir",
     "github.com/fatih/color",
+    "github.com/kvz/logstreamer",
 
 	# provider dependencies
 	"github.com/keybase/go-keychain",
