--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -34,7 +34,7 @@ required = [
 	"github.com/keybase/go-keychain",
 	"github.com/hoop33/go-cyberark",
 	"github.com/cyberark/conjur-api-go/conjurapi",
-	"github.com/gogosphere/xmlanswers",
+	"github.com/tiaguinho/gosoap",
 
     # test dependencies
     "github.com/stretchr/testify/require"
@@ -56,3 +56,7 @@ required = [
 [[constraint]]
   name = "github.com/stretchr/testify"
   version = "1.2.2"
+
+[[constraint]]
+  name = "github.com/tiaguinho/gosoap"
+  version = "1.1.0"
