--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,14 +9,14 @@ jobs:
 
       - restore_cache:
           keys:
-            - v1-pkg-cache
+            - vendor-cache
 
-      # Normally, this step would be in a custom primary image;
-      # we've added it here for the sake of explanation.
-      - run: go get github.com/Masterminds/glide
+      - run:
+          name: Install Dep
+          command: curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
 
       # install dependencies
-      - run: glide install
+      - run: dep ensure
 
       - run:
           name: Run unit tests
@@ -36,7 +36,7 @@ jobs:
             ls /tmp/coverage
 
       - save_cache:
-          key: v1-pkg-cache
+          key: vendor-cache
           paths:
             - "/go/src/tentacle/vendor"
 
