--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -40,6 +40,7 @@ required = [
 
     # test dependencies
     "github.com/stretchr/testify/require",
+    "github.com/stretchr/testify/suite",
     "github.com/stretchr/testify",
     "github.com/seborama/govcr"
 ]
