--- a/tentacle.example.yaml
+++ b/tentacle.example.yaml
@@ -29,7 +29,7 @@ providers:
     server: "yoursecretserver.yourdomain.com"
 
     # tokens can be retrieved by using:
-    # curl -v -H "Content-Type: application/x-www-form-urlencoded" -d "username={NAME}&password={PASSWORD}&organization=&domain=" --url "http://yoursecretserver.yourdomain.com/webservices/sswebservice.asmx/Authenticate"
+    # curl -v -L -H "Content-Type: application/x-www-form-urlencoded" -d "username={NAME}&password={PASSWORD}&organization=&domain=" --url "https://yoursecretserver.yourdomain.com/webservices/sswebservice.asmx/Authenticate"
     # and parsing the xml output for the token
     token: "token"
 
