--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -35,7 +35,7 @@ required = [
 	"github.com/keybase/go-keychain",
 	"github.com/hoop33/go-cyberark",
 	"github.com/cyberark/conjur-api-go/conjurapi",
-	"github.com/tiaguinho/gosoap",
+	"github.com/analogj/gosoap",
 	"github.com/analogj/go-lastpass",
 
     # test dependencies
@@ -61,7 +61,3 @@ required = [
 [[constraint]]
   name = "github.com/stretchr/testify"
   version = "1.2.2"
-
-[[constraint]]
-  name = "github.com/tiaguinho/gosoap"
-  version = "1.1.0"
